Bug 180819 - kmail search by status not possible anymore in KDE 4.2
Summary: kmail search by status not possible anymore in KDE 4.2
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: search (other bugs)
Version First Reported In: 1.11.0
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
: 184502 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-01-15 15:14 UTC by Roland Wolters
Modified: 2009-07-26 11:57 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roland Wolters 2009-01-15 15:14:18 UTC
Version:            (using Devel)
Installed from:    Compiled sources

In KDE 4.1.3 I used to search for e-mails by status to create a custom search folder where all e-mails are listed which are marked as task.

In the new KMail delivered with KDE 4.2RC1 this search possibility is not there anymore.

To reproduce this bug:
- mark some e-mails as task
- open search, try to create a virtual search-folder containing only mails which are marked as task

(Kubuntu KDE 4.2RC1 pcakages).
Comment 1 George Kiagiadakis 2009-01-15 16:42:25 UTC
Indeed I can't find how to search by status too...
Comment 2 Michael Kopp 2009-02-02 10:03:32 UTC
I just upgraded to 4.2.0 final. The issue is still there.
Comment 3 Andreas Stangl 2009-06-06 13:24:59 UTC
Still unable to search for mails with status "important" or "task"

kde version: 4.2.4
kmail version: 1.11.4
OS: gentoo ~amd64
Comment 4 Andreas Stangl 2009-06-08 11:28:08 UTC
Workaround:
Click onto "Search Messages" and enter "<status>" into the filtering field. Worked for me.
Comment 5 Jonathan Armond 2009-07-25 04:22:29 UTC
*** Bug 184502 has been marked as a duplicate of this bug. ***
Comment 6 Jonathan Armond 2009-07-26 11:57:08 UTC
SVN commit 1002525 by jarmond:

Enable search by status.

BUG: 180819
MERGE: 4.3

 M  +1 -0      kmsearchpatternedit.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1002525