Enable search by status.

BUG: 180819
MERGE: 4.3

svn path=/trunk/KDE/kdepim/; revision=1002525